# Hans-GSD-Raw-Calculator

./: .gitignore  ANCHORED_SUMMARY.md  AUDIT_TASK_FOR_HARNESS.md  FAT_FILES_COMPATIBILITY_REPORT.md  MAPA_COMPLETO_JSONs_GSD_Diet_Calc.md  README.md  beef_fat_raw.json  build_pipeline.py  check_fat_compatibility.py  chicken_fat_raw.json  core.py  coverage_report.md  doc_introspector.py  fix_tests.py  mapa_docs.py  mapa_run1.md  mapa_run2.md  nutrition_pipeline.py  opencode.json  out.txt  plan-mapa-generator-fix-addendum-v2.md  pork_fat_raw.json  pyproject.toml  requirements.txt  solver.py  test_audit_log.md
.golden_master/: audit_mapa.out  gate_mapa.out  generate_mapa.out  mapa_output.md  pytest.out  runtime.out  validate_db.out
audit/: baseline_manifest.json  cross_ref_index.json  cross_refs_drift.json
data/: DB_ingredientes.json  DB_ingredientes.json.backup-fdc-fix  DB_ingredientes.json.bak_v2.2.0  DB_ingredientes.json.bak_v2.2.0_full  DB_ingredientes.json.new  audit_provenance.json  audit_provenance.json.backup  audit_provenance.json.backup-external  audit_provenance.json.backup-external2  audit_provenance.json.backup-final  constraints.json  db_ingredientes.schema.json  external_verification_checklist.json  formulation_rules.json  growth_energy_skeletal.json  lp_parameters.schema.json  lp_parameters_data.json  objective_weights.json  orphan_refs_manifest.json  scenarios.json  toxicological_limits.json
docs/: FINAL_REPORT_V10_4_PHASE1.md  current_implementation_status.md  deviations_report_v10_4.md  mapa-regeneration-delta.md  migration-log.md  phase0-preflight-sanity.md  phase0a-callsite-audit.md  phase0a-tolerance-design.md  phase0c-rounding-policy.md  plan-full-mapa-fix.md  plan-mapa-generator-quicky-v1.2.md  plan_db_api.md
(+61 files in other folders)
