[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gsd-diet-calc"
version = "10.4.0"
description = "GSD Diet Calc — Raw Canine Diet Formulation Engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jsonschema>=4.17",
    "pulp==3.3.2",
]
license = {text = "Private project — not for distribution"}

[project.scripts]
gsd = "gsd.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

# -- mypy type checking --------------------------------------------------------
# python_version=3.10 is the MINIMUM supported version (pyproject.toml requires-python>=3.10).
# CI runs 3.12; both are valid.  mypy targets 3.10 to catch syntax/API drift
# that would break on the oldest supported runtime.
[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
check_untyped_defs = true
warn_return_any = true
warn_unused_configs = true
show_error_codes = true
show_column_numbers = true
pretty = true
exclude = ["build/", "dist/", ".eggs/", ".venv/"]
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = ["pulp.*", "jsonschema.*"]
ignore_missing_imports = true